appId: org.opentollgate.android
---
- launchApp
- tapOn: "Pay"
- assertVisible: "Pay"
- assertVisible: "Gateway"
- assertVisible: "Detect"